; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_registry.c_watch_registry.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_registry.c_watch_registry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wqi = common dso_local global i32 0, align 4
@registry_work_item = common dso_local global i32 0, align 4
@DelayedWorkQueue = common dso_local global i64 0, align 8
@REG_NOTIFY_CHANGE_LAST_SET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"ZwNotifyChangeKey returned %08x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @watch_registry(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @registry_work_item, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @ExInitializeWorkItem(i32* @wqi, i32 %5, i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = load i64, i64* @DelayedWorkQueue, align 8
  %10 = trunc i64 %9 to i32
  %11 = load i32, i32* @REG_NOTIFY_CHANGE_LAST_SET, align 4
  %12 = call i32 @ZwNotifyChangeKey(i32 %8, i32* null, i32 ptrtoint (i32* @wqi to i32), i32 %10, i32* %4, i32 %11, i32 1, i32* null, i32 0, i32 1)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @NT_SUCCESS(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %1
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @ERR(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %16, %1
  ret void
}

declare dso_local i32 @ExInitializeWorkItem(i32*, i32, i32) #1

declare dso_local i32 @ZwNotifyChangeKey(i32, i32*, i32, i32, i32*, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
